--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ type="text"value="Email: diana5277@hotmail.com"readonly style="color: black !imp
 <div _ngcontent-ng-c1968797247="" class="riu-checkbox" data-qa="noTitular">
 <div _ngcontent-ng-c1968797247="" class="group-reverse">
 <label _ngcontent-ng-c1968797247="" class="riu-checkbox__label strongest text-small" data-qa="noTitular" for="noTitular">
-                El titular de la tarjeta no es uno de los huéspedes. En este caso, debes ponerte en contacto con el Call Center. 
+                El titular de la tarjeta no es uno de los huespedes. En este caso, debes ponerte en contacto con el Call Center. 
               <sup _ngcontent-ng-c1968797247="" class="required">*</sup>
 <!-- -->
 </label>
