--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <!-- -->
 <div _ngcontent-ng-c3852945658="" class="riu-input__group">
 <input aria-label="Nombre" autocomplete="off"class="riu-input__field riu-input__field--default className"data-qa="input-name"id="input-name"
- type="text"value="Nombre: Diana Niled"readonly style="color: black !important; opacity: 1 !important;"><!-- --></div></div><!-- --></riu-input></div>
+ type="text"value="Nombre: Jose Jose"readonly style="color: black !important; opacity: 1 !important;"><!-- --></div></div><!-- --></riu-input></div>
 <div _ngcontent-ng-c1267027723="" class="riu-user-data__form--item riu-user-data__form-lastname">
 <riu-input _ngcontent-ng-c1267027723="" _nghost-ng-c3852945658="" class="ng-untouched ng-pristine ng-invalid" dataqa="input-lastname" formcontrolname="lastName" labelstyles="placeholder" type="text">
 <div _ngcontent-ng-c3852945658="" class="riu-input__container" data-qa="input-lastname-content">
@@ -135,7 +135,7 @@
 <!-- -->
 <div _ngcontent-ng-c3852945658="" class="riu-input__group">
 <input aria-label="Nombre" autocomplete="off"class="riu-input__field riu-input__field--default className"data-qa="input-name"id="input-name"  
-type="text" value="Apellido: Solorzano Ramos" readonly style="color: black !important; opacity: 1 !important;"><!-- --></div></div><!-- --></riu-input></div>
+type="text" value="Apellido: el principe" readonly style="color: black !important; opacity: 1 !important;"><!-- --></div></div><!-- --></riu-input></div>
 </div><!-- -->
 <div _ngcontent-ng-c1267027723="" class="riu-user-data__row">
 <div _ngcontent-ng-c1267027723="" class="riu-user-data__form--item riu-user-data__form-email">
