--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ type="text"value="Email: aoria01@gmail.com"readonly style="color: black !importa
 <!-- -->
 <input _ngcontent-ng-c1968797247="" aria-label="Sí, deseo contratar el servicio de traslados" class="riu-checkbox__field riu-checkbox__field--sm riu-checkbox__field--primary" data-qa="riu-transport" id="riu-transport" tabindex="0" title="Sí, deseo contratar el servicio de traslados" type="checkbox"/></div><!-- --></div></riu-checkbox></div><!-- --><!-- --></div></form></section></riu-transport><!-- --><!-- --><riu-payment _nghost-ng-c2098815706="" dataqa="checkout-form-payment"><section _ngcontent-ng-c2098815706="" class="section-box"><form _ngcontent-ng-c2098815706="" class="ng-untouched ng-pristine ng-invalid" novalidate=""><div _ngcontent-ng-c2098815706="" class="riu-payment">
 <header _ngcontent-ng-c2098815706="" class="riu-payment__title section-hr"><span _ngcontent-ng-c2098815706="" class="section-title" id="title">
-                                            Formulario de pago</span><!-- --></header>
+                                            Formulario de pago.</span><!-- --></header>
 <label _ngcontent-ng-c2098815706="" class="stronger riu-payment__label"> Selecciona el método de pago deseado <br/>
 </label><div _ngcontent-ng-c2098815706="" class="riu-payment__buttons riu-payment__section">
 <!-- -->
